tests/fixtures/invalid/pow_dict_list_str.py
# Cannot call pow() with Dict[str, int], List[int], Str
x = pow({"a": 1}, [1, 2, 3], "hello")
